# goldorak

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md  Setup.md  build.sh  clean.sh  eurobot.xcf  fabfile.py  odometry.c  odometry.h  odometry.tex  package.yml  pid_tune.perspective  robot_base.h  run_tests.sh  setpoint.py  test.sh  toolchain.cmake
cvra_msgs/: CMakeLists.txt  package.xml
cvra_msgs/msg/: BeaconSignal.msg  MotorControlSetpoint.msg  MotorControlVelocity.msg  MotorEncoderStamped.msg  MotorFeedbackEncoderPosition.msg  MotorFeedbackPID.msg
diff_base_control/: CMakeLists.txt  package.xml
diff_base_control/src/: controller_node.cpp
diff_base_odometry/: CMakeLists.txt  package.xml
diff_base_odometry/src/: odometry_node.cpp
doc/: .gitignore  .rapport.tex.swp  Makefile  main.tex  rapport.tex
goldorak_base/: CMakeLists.txt  nodelets.xml  package.xml
goldorak_base/cfg/: EnableMotor.cfg  FeedbackStream.cfg  MotorBoard.cfg  PID.cfg
goldorak_base/launch/: base.launch  motor.launch
goldorak_base/param/: base.yaml
goldorak_base/scripts/: motor_board_sim.py
goldorak_base/src/: UavcanMotorConfig.hpp  UavcanRosMotorConfig.hpp  UavcanRosMotorController.hpp  UavcanRosProximityBeaconDriver.hpp  controller_node.cpp  controller_nodelet.cpp  controller_nodelet.h  fishing_nodelet.cpp  fishing_nodelet.h  joint_state_publisher_nodelet.cpp  joint_state_publisher_nodelet.h  main.cpp  motor_config_send_once.cpp  motor_param.hpp  odometry_nodelet.cpp  odometry_nodelet.h  platform_linux.cpp  uavcan_bridge.cpp  uavcan_bridge.h  uavcan_bridge_nodelet.cpp  uavcan_bridge_nodelet.h  uc_config_server.cpp  uc_publisher.cpp
goldorak_base/src/odometry/: .travis.yml
goldorak_base/src/odometry/doc/: Makefile
goldorak_base/srv/: FishingAxisControl.srv  FishingYAxisControl.srv
goldorak_base/tests/: motor_param_test.launch  proximity_beacon_driver_test.launch  test_config.yaml
goldorak_bringup/: CMakeLists.txt  package.xml
goldorak_bringup/config/: left_wheel.yaml  right_wheel.yaml
goldorak_bringup/launch/: goldorak.launch  goldorak_sim.launch  monitor.launch  strategy.launch  test_motor.launch
goldorak_bringup/param/: beacon.yaml  fishing_impeller.yaml  fishing_y_axis.yaml  fishing_z_axis.yaml  left_wheel.yaml  right_wheel.yaml  robot.yaml  robot_simulated.yaml  test_motor.yaml  test_nodes.yaml  uavcan_nodes.yaml  umbrella.yaml
goldorak_bringup/rviz/: monitor.rviz
goldorak_bringup/scripts/: send_setpoint.py  send_setpoint_alternating.py
goldorak_description/: CMakeLists.txt  package.xml
goldorak_description/launch/: display.launch
goldorak_description/urdf/: goldorak.xacro
goldorak_diffbase/: CMakeLists.txt  package.xml
goldorak_diffbase/src/: controller_node.cpp  odometry_node.cpp
goldorak_diffbase/src/odometry/: README.md  odometry.c  package.yml
goldorak_navigation/: CMakeLists.txt  package.xml
goldorak_navigation/launch/: map.launch  navigation.launch  real_nav.launch  setup_nav.launch  sim_nav.launch
goldorak_navigation/map/: eurobot.yaml  test_map.yaml
goldorak_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
goldorak_sensors/: CMakeLists.txt  package.xml
goldorak_sensors/src/: laser1d_publisher.cpp
goldorak_simulation/: CMakeLists.txt  package.xml
goldorak_simulation/config/: control.yaml
goldorak_simulation/launch/: control.launch  display.launch  eurobot2016.launch  gazebo.launch  goldorak.launch  navigation.launch
goldorak_simulation/models/table2016/: model.config  model.sdf
goldorak_simulation/models/table2016/meshes/: table.dae
goldorak_simulation/rviz/: nav.rviz
goldorak_simulation/urdf/: goldorak.xacro
goldorak_simulation/worlds/: eurobot2016.world
goldorak_state_publisher/: CMakeLists.txt  package.xml
goldorak_state_publisher/src/: joint_state_publisher.cpp  real_state_publisher.cpp
goldorak_strategy/: CMakeLists.txt  package.xml
goldorak_strategy/scripts/: fish_eject_driver.sh  move_base_override.py  obstacle_avoidance.py  reset_pose.py  smach_demo.py  starter.py
goldorak_strategy/tests/: test_obstacle_avoidance.py
src/: CMakeLists.txt  odometry.c  odometry.h  publisher.cpp
sysops/: create_virtual_can.sh  goldorak_overlay.sh  share_internet_bbb.sh  share_internet_pc.sh  share_ros_bbb.sh  share_ros_pc.sh
tests/: odometry_test.cpp
uavcan_core/: CMakeLists.txt  build.sh  package.xml  setup.py
uavcan_core/cfg/: EnableMotor.cfg  FeedbackStream.cfg  MotorBoard.cfg  PID.cfg
uavcan_core/launch/: motor.launch
uavcan_core/scripts/: cvra_bridge.py  motor_board_sim.py  uavcan_bridge.py  uavcan_publisher.py
uavcan_core/src/: UavcanMotorController.hpp  UavcanProximityBeaconDriver.hpp  UavcanRosMotorConfig.hpp  UavcanRosMotorController.hpp  UavcanRosProximityBeaconDriver.hpp  enable_encoder_stream.cpp  enable_motor_control.cpp  load_dummy_config.cpp  motor_config_common.cpp  motor_config_send_once.cpp  motor_config_server.cpp  motor_param.hpp  platform_linux.cpp  uavcan_bridge.cpp  uc_publisher.cpp  uc_service_client.cpp  uc_subscriber.cpp
uavcan_core/src/uavcan_bridge/: bridge.py  motor_callbacks.py  utils.py
uavcan_core/tests/: motor_param_test.cpp  motor_param_test.launch  proximity_beacon_driver_test.cpp  proximity_beacon_driver_test.launch  test_bridge.py  test_config.yaml  test_cvra_bridge.py  test_motor_callbacks.py  test_node_cvra_bridge.launch  test_node_cvra_bridge.py  test_node_uavcan_publisher.launch  test_node_uavcan_publisher.py  test_uavcan_bridge.py  test_uavcan_nodes.yaml  test_utils.py
