<?xml version="1.0"?>
<package>
  <name>cvra_msgs</name>
  <version>0.1.0</version>
  <description>The CVRA message definitions package</description>

  <maintainer email="missrisalaheddine@gmail.com">Salah-Eddine Missr</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
