<package>
  <name>goldorak_navigation</name>
  <version>0.1.0</version>

  <description>This package contains the navigation stack setup for Goldorak</description>
  <author>Salah-Eddine Missri</author>

  <maintainer email="missrisalaheddine@gmail.com">Salah-Eddine Missri</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>move_base</run_depend>
  <run_depend>goldorak_state_publisher</run_depend>
  <run_depend>goldorak_simulation</run_depend>
  <run_depend>goldorak_diffbase</run_depend>

</package>
