<?xml version="1.0"?>
<package>
  <name>goldorak_sensors</name>
  <version>0.1.0</version>
  <description>The goldorak_sensors package</description>

  <maintainer email="missrisalaheddine@gmail.com">Salah-Eddine Missri</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
