<?xml version="1.0"?>
<package>
  <name>goldorak_strategy</name>
  <version>0.1.0</version>
  <description>The goldorak_strategy package</description>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>

  <export>
  </export>
</package>
