<?xml version="1.0"?>
<package>
  <name>uavcan_core</name>
  <version>0.1.0</version>
  <description>UAVCAN-ROS bridge package</description>

  <maintainer email="missrisalaheddine@gmail.com">Salah-Eddine Missr</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cvra_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cvra_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
